# DMA

./: Copy_of_Fahir_circuit.ipynb  README.md  main.py  py.test  setup.cfg
.github/workflows/: func.py  main.py  python-package.yml  stress.py
Test/Data/: 1060_Frame2.txt  1061_Frame2.txt  1062_Frame2.txt  1063_Frame2.txt  1065_Frame2.txt  1067_Frame2.txt  1068_Frame2.txt  1069_Frame2.txt
Test/Materials Studio outputs/: FRAME2_compression Data (70).txt  FRAME2_compression Data (71).txt  FRAME2_compression Data (72).txt  FRAME2_compression Data (73).txt  rename_files.py
Test/Materials Studio perl script/: MD_run.pl
src/: main.py
