[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 1.0
author = Sadollah Ebrahimi
author_email = sa.ebrahimi@gmail.com
description = Dynamic mechanical analysis (DMA) using Materials studio output
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s.ebrahimi/DMA
project_urls =
    Bug Tracker = https://github.com/s.ebrahimi/DMA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src